# NexusShell

./: # Code Citations.md  .editorconfig  .gitattributes  .gitignore  ADVANCED_FEATURES.md  AUTOMATED_FIXES_COMPLETE.md  COMMAND_STATUS.diff.md  COMMAND_STATUS.generated.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  PROJECT_STATUS_PERFECT_COMPLETION.md  README.md  SECURITY.md  TASK_LIST.md  TODO.md  build_and_test.ps1  clippy.toml  cp_implementation_analysis.md  create_ui_stub.ps1  demo_enhanced_cui.ps1  deny.toml  dependency_tree.txt  fix_errors.ps1  fix_panics.ps1  fix_special_cases.ps1  fix_ui_unused_vars.ps1  fix_ui_warnings.ps1  fix_unused_vars.ps1  fix_warnings.ps1  fix_warnings2.ps1  generate_themes.py  justfile  manual_tty_test.rs  nxsh_config.toml  rust-toolchain.toml  rustfmt.toml  (+19 more)
crates/nxsh_builtins/: Cargo.toml  build.rs  disabled_modules.md
crates/nxsh_builtins/locales/: de-DE.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl  it-IT.ftl  ja-JP.ftl  ko-KR.ftl  pt-BR.ftl  ru-RU.ftl  zh-CN.ftl
crates/nxsh_builtins/logs/: logstats_snapshot.json
crates/nxsh_builtins/src/: README_COMPRESSION.md  advanced_cui.rs  alias.rs  alias_new.rs  alias_old.rs  ar.rs  arp.rs  arp.rs.bak  at.rs  awk.rs  awk_tests.rs  base64.rs  bc.rs  beautiful_grep.rs  beautiful_ls.rs  bg.rs  bind.rs  blkid.rs  break.rs  break_builtin.rs  builtin.rs  builtin_manager.rs  bunzip2.rs  bunzip2_complete.rs  bunzip2_old.rs  bzip2.rs  bzip2_new.rs  bzip2_old.rs  cal.rs  case.rs  cat.rs  cd.rs  chgrp.rs  chgrp_new.rs  chgrp_old.rs  chmod.rs  chown.rs  cksum.rs  clear.rs  comm.rs  (+278 more)
crates/nxsh_builtins/src/common/: crash_diagnosis.rs  i18n.rs  locale_format.rs  logging.rs  metrics.rs  mod.rs  process_utils.rs  resource_monitor.rs  sed_utils.rs  update_system.rs
crates/nxsh_builtins/tests/: alias.rs  crash_xor_tests.rs  dependency_gating_tests.rs  export.rs  fsck_apply_mirror_tests.rs  fsck_free_clusters_fat12_16_tests.rs  fsck_free_clusters_tests.rs  fsck_journal_tests.rs  fsck_mirror_sync_fat12_16_tests.rs  fsck_tests.rs  job_control.rs  locale_format_tests.rs  log_mode_roundtrip_tests.rs  log_mode_strict_tests.rs  log_mode_tests.rs  logstats.rs  logstats_prom_tests.rs  ls_git_status.rs  table_roundtrip.rs  tar_zstd_roundtrip.rs  timedatectl_cli_json_capture_tests.rs  timedatectl_json_roundtrip_strict.rs  timedatectl_json_tests.rs  unzstd_cli_tests.rs  vars.rs  zstd_cli_tests.rs  zstd_repeat_blocks_tests.rs  zstd_rle_seq_roundtrip.rs  zstd_roundtrip_tests.rs  zstd_store_block_tests.rs
crates/nxsh_cli/: Cargo.toml
crates/nxsh_cli/examples/: visual_completion_demo.rs
crates/nxsh_cli/src/: main.rs
crates/nxsh_core/: Cargo.toml  Cargo.toml.temp
crates/nxsh_core/benches/: io_performance.rs  jit_vs_interp.rs  nxsh_performance.rs  startup.rs
crates/nxsh_core/examples/: integration_test_system.rs  monitoring_example.rs
crates/nxsh_core/src/: advanced_scheduler.rs  closures.rs  compat.rs  context.rs  crash_handler.rs  documentation_system.rs  encryption.rs  error.rs  error_handling.rs  executor.rs  i18n.rs  integration_test_system.rs  internationalization.rs  io_optimization.rs  job.rs  lib.rs  locale_alias.rs  logging.rs  macros.rs  memory.rs  memory_efficient.rs  metrics.rs  monitoring.rs  namespace.rs  network_security.rs  pattern_matching.rs  performance.rs  performance_profiler.rs  plugin_runtime_test.rs  powershell_compat.rs  result.rs  security_auditor.rs  shell.rs  simd_optimization.rs  startup.rs  startup_metrics.rs  stream.rs  structured_commands.rs  structured_data.rs  structured_logging.rs  (+3 more)
crates/nxsh_core/templates/: api_module.md  user_guide.md
crates/nxsh_core/tests/: background_job_tests.rs  brace_expansion_tests.rs  brace_extglob_additional_tests.rs  command_subst_split_tests.rs  command_substitution_timeout_tests.rs  executor_tests.rs  generics_tests.rs  mir_closure.rs  mir_edge_cases_tests.rs  mir_errors.rs  mir_performance_tests.rs  mir_short_circuit.rs  object_pipeline_parallel_tests.rs  per_command_timeout_tests.rs  powershell_compat_integration.rs  user_defined_functions_tests.rs
crates/nxsh_hal/: Cargo.toml
crates/nxsh_hal/benches/: hal_performance.rs
crates/nxsh_hal/examples/: network_probe.rs
crates/nxsh_hal/src/: command.rs  completion.rs  error.rs  fast_completion.rs  fs.rs  fs_enhanced.rs  lib.rs  memory.rs  network.rs  network_broken.rs  network_fixed.rs  pipe.rs  platform.rs  process.rs  process_enhanced.rs  seccomp.rs  time.rs  time_enhanced.rs
crates/nxsh_plugin/: Cargo.toml
crates/nxsh_plugin/src/: component.rs  component_new.rs  component_old.rs  dynamic_loader.rs  enhanced_runtime.rs  json.rs  key.rs  keys.rs  lib.rs  loader.rs  manager.rs  manager_stub.rs  native_runtime.rs  permissions.rs  plugin_manager_advanced.rs  registrar.rs  remote.rs  resource_table.rs  resource_table_new.rs  resource_table_old.rs  runtime.rs  runtime_new.rs  runtime_old.rs  security.rs  security_sandbox.rs  signature.rs  wasi_advanced.rs
crates/nxsh_plugin/tests/: capabilities_manifest_tests.rs
crates/nxsh_ui/: Cargo.toml
crates/nxsh_ui/examples/: theme_validate_quick.rs  tty_nocolor_test.rs
crates/nxsh_ui/src/: accessibility.rs  advanced_cui.rs  ansi_render.rs  app.rs  app_tests.rs  completion.rs  completion_demo.rs  completion_engine.rs  completion_engine_corrupted.rs.bak  completion_integration.rs  completion_metrics.rs  completion_panel.rs  completion_panel.rs.backup  config.rs  cui.rs  cui_app.rs  cui_app_corrupted.rs.bak  cui_output.rs  cui_prompt.rs  cui_tests.rs  enhanced_line_editor.rs  enhanced_ui.rs  highlighting.rs  history.rs  history_crypto.rs  input_handler.rs  lib.rs  lib_old.rs  lib_phase1.rs  line_editor.rs  line_editor_new.rs  line_editor_old.rs  prompt.rs  readline.rs  scroll_buffer.rs  simple_cui.rs  startup_profiler.rs  status_line.rs  tab_completion.rs  theme_system_test.rs  (+9 more)
crates/nxsh_ui/tests/: ansi_render_tests.rs  enhanced_ui_tests.rs  ui_steps_tests.rs  ui_ux_steps_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_input.rs  ruzstd_stream.rs
(+190 files in other folders)
