[workspace]
resolver = "2"
members = [
    "crates/nxsh_core",
    "crates/nxsh_parser",
    "crates/nxsh_ui",
    "crates/nxsh_hal",
    # "crates/nxsh_plugin",  # Temporarily disabled
    "crates/nxsh_builtins",
    "crates/nxsh_cli",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["local-offset"] } 
filetime = "0.2"
walkdir = "2"
windows-sys = "0.48"
rand = "0.8"
term_size = "0.3"
# Monitoring and logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sysinfo = "0.30"
uuid = { version = "1.0", features = ["v4"] }
# Crash reporting dependencies  
backtrace = "0.3"
# Update system dependencies
ed25519-dalek = "2.1"
sha2 = "0.10"
# Additional dependencies
regex = "1.10"
dirs = "5.0"
tempfile = "3.8" 