[workspace]
resolver = "2"
members = [
    "crates/nxsh_core",
    "crates/nxsh_parser",
    "crates/nxsh_ui",
    "crates/nxsh_hal",
    "crates/nxsh_builtins",
    "crates/nxsh_cli",
    "crates/nxsh_plugin",  # Re-enabled: Pure Rust WASI runtime implementation
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["local-offset"] } 
filetime = "0.2"
walkdir = "2"
windows-sys = "0.48"
rand = "0.8"
term_size = "0.3"
# Monitoring and logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
sysinfo = "0.30"
uuid = { version = "1.0", features = ["v4"] }
# Crash reporting dependencies  
backtrace = "0.3"
# Update system dependencies
ed25519-dalek = "2.1"
sha2 = "0.10"
# Additional dependencies
regex = "1.10"
dirs = "5.0"
tempfile = "3.8" 

# Performance optimization profiles
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
incremental = false

[profile.release-small]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

# Profile Guided Optimization build profile
[profile.release-pgo]
inherits = "release"
# Keep LTO fat, but allow PGO instrumentation/usage via RUSTFLAGS
debug = false
incremental = false