[package]
name = "nxsh_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for NexusShell"
license = "Apache-2.0"
repository = "https://github.com/SeleniaProject/NexusShell"

[features]
default = []
# JIT feature disabled to avoid C/C++ dependencies
# jit = ["cranelift-codegen", "cranelift-frontend"] 
object-pipe = []

[dependencies]
# Minimal pure Rust dependencies only

# Error handling - minimal
thiserror = { version = "1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }

# Basic serialization with derive macros
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Pure Rust cryptography
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }

# Time utilities - minimal
time = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Logging - pure Rust
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Terminal detection - pure Rust
is-terminal = "0.4"  # Replacement for atty

# Collections - using standard library instead of dashmap
# Standard library HashMap, BTreeMap, etc. will be used

# HAL and parser dependencies
nxsh_hal = { path = "../nxsh_hal" }
nxsh_parser = { path = "../nxsh_parser" }

# Unix system calls
nix = "0.27"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = "0.5" 