[package]
name = "nxsh_hal"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
anyhow = "1"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["fs", "process", "signal"] }
libc = "0.2"
seccomp-sys = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "iphlpapi"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Time", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Threading"] } 